# part-4

./: 01. Istruzioni Condizionali in Python.ipynb  02. Istruzioni di Iterazione in Python.ipynb  03. Generatori e Comprehension.ipynb  04. Esempio - Zeta di Riemann.ipynb  05. Esempio - Somma di Elementi.ipynb  06. Esercizio - Calcolo Ripetuto - sol.ipynb  06. Esercizio - Calcolo Ripetuto.ipynb  07. Esercizio - Prodotto di elementi in una lista - sol.ipynb  07. Esercizio - Prodotto di elementi in una lista.ipynb  08. Esercizio - Prodotto Scalare - sol.ipynb  08. Esercizio - Prodotto Scalare.ipynb  09. Esercizio - Serie Geometrica - sol.ipynb  09. Esercizio - Serie Geometrica.ipynb  10. Esercizio - Fattoriale - sol.ipynb  10. Esercizio - Fattoriale.ipynb  11. Esercizio - Logaritmo (1) - sol.ipynb  11. Esercizio - Logaritmo (1).ipynb  12. Esercizio - Logaritmo (2) - sol.ipynb  12. Esercizio - Logaritmo (2).ipynb  13. Esercizio - Operatore modulo - sol.ipynb  13. Esercizio - Operatore modulo.ipynb  14. Esercizio - Numeri primi - sol.ipynb  14. Esercizio - Numeri primi.ipynb  15. Esercizio - Inversione di Lista - sol.ipynb  15. Esercizio - Inversione di Lista.ipynb  16. Esercizio - Somma Pari e Dispari - sol.ipynb  16. Esercizio - Somma Pari e Dispari.ipynb  17. Esercizio - Filtro - sol.ipynb  17. Esercizio - Filtro.ipynb  18. Esercizio - Segno - sol.ipynb  18. Esercizio - Segno.ipynb  19. Esercizio - Differenze - sol.ipynb  19. Esercizio - Differenze.ipynb  20. Esercizio - Media Mobile - sol.ipynb  20. Esercizio - Media Mobile.ipynb  pyproject.toml  (+4 more)
