[project]
name = "part-4"
version = "0.1.0"
description = ""
authors = [
    {name = "Michele Lombardi",email = "michele.lombardi2@unibo.it"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "notebook (>=7.5.4,<8.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyterlab-rise (>=0.43.1,<0.44.0)",
    "nbconvert[webpdf] (>=7.17.0,<8.0.0)"
]
